manifests/infrastructure/traefik-system-config/crowdsec-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: crowdsec
  namespace: traefik-system
spec:
  plugin:
    bouncer:
      enabled: true
      crowdsecMode: live
      crowdsecLapiScheme: https
      crowdsecLapiHost: crowdsec-service.crowdsec-system.svc.cluster.local:8080
      crowdsecLapiTLSCertificateAuthorityFile: /etc/traefik/crowdsec-certs/ca.crt
      crowdsecLapiTLSCertificateBouncerFile: /etc/traefik/crowdsec-certs/tls.crt
      crowdsecLapiTLSCertificateBouncerKeyFile: /etc/traefik/crowdsec-certs/tls.key
