manifests/infrastructure/traefik-system-config/dashboard-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-redirect
  namespace: traefik-system
spec:
  redirectRegex:
    permanent: true
    regex: ^https:\\/\\/traefik.omnilium.local(\\/?(dashboard)?)$
    replacement: https://traefik.omnilium.local/dashboard/
