manifests/infrastructure/traefik-system-config/dashboard-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.omnilium.local`)
      middlewares:
        - name: dashboard-redirect
          namespace: traefik-system
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: dashboard-tls
